<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="1"
    android:columnCount="2"
    android:weightSum="1"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assistance_when_date"
        android:id="@+id/btn_date_asistencia"
        android:layout_weight="0.06"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|left|fill_vertical"
        android:drawableStart="@android:drawable/ic_menu_my_calendar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num_hermanos"
        android:layout_weight="0.06"
        android:hint="@string/assistance_how_many_brothers" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num_visitas"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:hint="@string/assistance_how_many_visits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num_adolescentes"
        android:layout_weight="0.06"
        android:hint="@string/assistance_how_many_teenagers" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num_ninos"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:hint="@string/assistance_how_many_kids" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="000"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Total"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:gravity="center" />

</LinearLayout>
